# sooper-jack-midi-looper

./: .gitignore  Makefile.in  OSC  README  configure.ac  control_action.c  control_action.h  control_action_table.c  control_action_table.h  loop.c  loop.h  loop_buffer.c  loop_buffer.h  looper.c  midi_message.c  midi_message.h
src/: Makefile.am  Makefile.in  control_action_table.c  control_action_table.h  debug.h  loop.c  loop.h  loop_buffer.c  loop_buffer.h  looper.c  midi_message.c  midi_message.h
src/GUI/: Makefile.am  Makefile.in  looper_gui.in
src/GUI/jack_midi_looper_gui/: Makefile.am  Makefile.in  MappingDialog.ui  Ui_MainWindow.py  Ui_MappingDialog.py  __init__.py  engine_manager.py  gui_main.py  looper.ui  models.py  subject.py
